--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 .container{
     background-color: rgb(3, 122, 190);
     width: 100vw;
-   /* margin-left:  4%; */
-   /* position: absolute; */
 }
 .navbar{
     position: fixed;
@@ -21,6 +19,7 @@
 }
 .navbar li a:hover{
     color: rgb(0, 174, 255);
+    border-bottom: 2px solid rgb(1, 136, 247);
 }
 .navbar li a{
     font-size: 20px;
@@ -75,10 +74,7 @@
     align-items: center;
     justify-content:center;
 }
-.about1 h3{
-    padding-bottom: 20%;
-    font-size: 20px;
-}
+
 .text{
     margin-right: 10%;
     margin-bottom:  10%;
@@ -88,12 +84,7 @@
     height: 100vh;
     border: 1px solid rgb(44, 44, 44);
 }
-/* .services h3{
-    position: relative;
-    display: inline-block;
-    margin-bottom: 20%;
-    background-color: blueviolet;
-} */
+
 .services2{
     display: flex;
     justify-content: space-around;
@@ -135,14 +126,11 @@
 .skills{
     height: 100vh;
     border: 1px solid rgb(0, 81, 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.skills h4{
-    color: rgb(3, 139, 250);
-    justify-self: center;
-    font-size: 25px;
-    font-weight: bolder;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
+
 .skills img{
     width: 100px;
     height: 100px;
@@ -184,6 +172,7 @@
 }
 .project{
     height: 600px;
+    
 }
 .project h3{
     padding-top: 8%;
@@ -202,16 +191,19 @@
     background-color: rgba(161, 155, 155, 0.507);
     width: 350px;
     height: 400px;
+    border-radius: 5px;
 }
 .pro2{
     background-color: rgba(161, 155, 155, 0.507);
     width: 350px;
     height: 400px;
+    border-radius: 5px;
 }
 .pro3{
     background-color:  rgba(161, 155, 155, 0.507);
     width: 350px;
     height: 400px;
+    border-radius: 5px;
 }
 .pro4{
     background-color:  rgba(161, 155, 155, 0.507);
@@ -219,7 +211,7 @@
     height: 400px;
 }
 .project1 h4{
-    color: yellowgreen;
+    color: rgb(0, 0, 0);
     font-size: 20px;
     font-weight: bold;
     justify-self: center;
@@ -227,7 +219,6 @@
 .project1 img{
     width: 220px;
     height: 150px;
-    border-radius: 20%;
     padding-left: 4%;
     padding-top: 4%;
 
@@ -236,7 +227,7 @@
     height: 100vh;
 }
 .project1 p{
-    color: rgb(117, 117, 117);
+    color: rgb(49, 48, 48);
     font-size: 15px;
     padding-left: 5%;
 }
@@ -298,4 +289,10 @@
     font-weight: bold;
     margin-bottom: 20%;
 }
-
+footer {
+      text-align: center;
+      padding: 13px;
+      background: rgb(0, 0, 0);
+      color:rgb(255, 255, 255);
+      margin-top: 30px;
+    }
