--- a/style.css
+++ b/style.css
@@ -249,27 +249,64 @@
     padding-right: 3%;
 } 
 .pro1{
-    background-color: rgba(161, 155, 155, 0.507);
+    background-color: rgb(255, 255, 255);
     width: 350px;
     height: 400px;
     border-radius: 5px;
+    box-shadow: 0 10px 10px black;
 }
+.pro1:hover{
+    background-color: rgba(202, 199, 199, 0.733);
+    width: 360px;
+    height: 410px;
+    transition: 1s;
+    border-radius: 5px;
+    box-shadow: 0 10px 10px black;
+}
+
 .pro2{
-    background-color: rgba(161, 155, 155, 0.507);
+    background-color: rgb(255, 255, 255);
     width: 350px;
     height: 400px;
     border-radius: 5px;
+    box-shadow: 0 10px 10px black;
+}
+.pro2:hover{
+    background-color: rgba(202, 199, 199, 0.733);
+    width: 360px;
+    height: 410px;
+    transition: 1s;
+    border-radius: 5px;
+    box-shadow: 0 10px 10px black;
 }
 .pro3{
-    background-color:  rgba(161, 155, 155, 0.507);
+    background-color:  rgb(255, 255, 255);
     width: 350px;
     height: 400px;
     border-radius: 5px;
+    box-shadow: 0 10px 10px black;
+}
+.pro3:hover{
+    background-color: rgba(202, 199, 199, 0.733);
+    width: 360px;
+    height: 410px;
+    transition: 1s;
+    border-radius: 5px;
+    box-shadow: 0 10px 10px black;
 }
 .pro4{
-    background-color:  rgba(161, 155, 155, 0.507);
+    background-color:  rgb(255, 255, 255);
     width: 350px;
     height: 400px;
+    box-shadow: 0 10px 10px black;
+}
+.pro4:hover{
+    background-color: rgba(202, 199, 199, 0.733);
+    width: 360px;
+    height: 410px;
+    transition: 2s;
+    border-radius: 5px;
+    box-shadow: 0 10px 10px black;
 }
 .project1 h4{
     color: rgb(0, 0, 0);
