--- a/style.css
+++ b/style.css
@@ -39,9 +39,11 @@
     
 }
 .navbar button:hover{
-    background-color: black;
+    background-color: rgb(0, 60, 255);
     transition: 1s;
     box-shadow: 0 6px 10px black;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .text h1 span{
