--- a/style.css
+++ b/style.css
@@ -300,6 +300,7 @@
     background-color:  rgb(255, 255, 255);
     width: 350px;
     height: 400px;
+    border-radius: 5px;
     box-shadow: 0 10px 10px black;
 }
 .pro4:hover{
@@ -317,10 +318,12 @@
     justify-self: center;
 }
 .project1 img{
-    width: 220px;
-    height: 150px;
-    padding-left: 4%;
-    padding-top: 4%;
+    width: 250px;
+    height: 170px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    /* padding-left: 4%; */
+    /* padding-top: 4%; */
 
 }
 .bolg{
