--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ li {
   align-items: center;
   padding: 0 2rem;
   /* color: rgb(255, 1, 1); */
+  background-color: rgba(0, 10, 17, 0.363);
   position: fixed;
   top: 0;
   left: 0;
@@ -93,10 +94,7 @@ li {
   transition: .25s;
 }
 
-/* .nav-link:hover::before {
-  transform: scaleX(1);
-  transform-origin: left;
-} */
+
 
 .nav-link:hover {
   color: black;
@@ -130,14 +128,13 @@ li {
   transition: 1s;
 }
 
-/* Sections Stylin */
-/* section {
-  padding: 60px 20px;
-} */
 
 h3{
   text-align: center;
-  margin-bottom: 30px;
+  /* justify-content: center; */
+  justify-items: center;
+  margin-bottom: 20px;
+  margin-top: -10px;
   font-size: 28px;
   color:black;
 }
