--- a/style.css
+++ b/style.css
@@ -134,8 +134,9 @@ h3{
   text-align: center;
   /* justify-content: center; */
   justify-items: center;
-  margin-bottom: 20px;
-  margin-top: -10px;
+  /* margin-bottom: 20px; */
+  flex-basis: 1;
+  /* margin-top: -10px; */
   font-size: 28px;
   color:black;
 }
@@ -187,11 +188,12 @@ h3{
   font-weight: bold;
 }
 
-/* About */
+/* Abou */
 #about {
   /* background: rgb(122, 109, 83); */
   border-radius: 10px;
   min-height: 100vh;
+  flex-wrap: wrap;
 }
 
 .about2 {
@@ -341,7 +343,7 @@ h3{
   box-shadow: 0 10px 10px black;
   padding: 2%;
   height: 50%;
-  width: 20vw;
+  width: 90vw;
 }
 
 .mil input,
